fixed spacing

--- a/src/assets/sass/base/_helpers.scss
+++ b/src/assets/sass/base/_helpers.scss
@@ -72,6 +72,7 @@
 
 .section-title {
   text-align: center;
+  margin-bottom: $double-unit-layout;
   &:after {
     content: '';
     background-image: url($images-path + 'section-title-separator.png');
